# RTD_tester

./: README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 4b2b5a85ba6c_create_last_run_and_measurements_tables.py  66ede9f08aa2_create_runs_and_measurements.py
src/: config.py  database.py  dependencies.py  glob.py  last_run_trigger.sql  logging_config.py  logic.py  main.py  meas_control.py  models.py  routers.py  schemas.py  state.py  web_socket.py
src/core/: config.py  logging_config.py
static/: styles.css
static/css/: styles.css
static/js/: script.js  script_old_work.js
templates/: index.html
