[project]
name = "rtd-tester"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi[all]>=0.119.0",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.2.250926",
    "psutil>=7.1.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "pyvisa>=1.15.0",
    "pyvisa-py>=0.8.1",
    "uvicorn>=0.37.0",
    "zeroconf>=0.148.0",
]
